compiler/testData/diagnostics/tests/annotations/AnnotationForObject.fir.kt
// Check that there won't be "Rewrite at slice ANNOTATION key" exception - EA-36935
@<!OTHER_ERROR!>someErrorAnnotation<!> object Test {
}